@@ -2,6 +2,12 @@ servefile changelog
 ===================
 
 
+Unreleased
+----------
+
+	* fixed bug where exception was shown on transmission abort with python3
+
+
 2020-10-30 v0.5.1
 -----------------
 
